fix: change menu width to `fit-content`
Change menu width to `fit-content` to stop long snippet filenames from being truncated. This is especially helpful when using namespaced snippets where the scope or function is at the end of the filename.

Fixes #11

--- a/styles.css
+++ b/styles.css
@@ -28,7 +28,7 @@ STATUS BAR MENU
 }
 
 .MySnippets-statusbar-menu {
-  width: 290px;
+  width: fit-content;
   max-height: calc(100% - 90px);
 }
 
